--- a/bib.html
+++ b/bib.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About</title>
+<title>Contact</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="plugins/mCustomScrollbar/jquery.mCustomScrollbar.css">
-<link rel="stylesheet" type="text/css" href="styles/main_styles.css">
-<link rel="stylesheet" type="text/css" href="styles/responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/contact.css">
+<link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
 </head>
 <body>
 
@@ -23,14 +23,14 @@
 			<div class="logo">Tapajit<span>.</span>Dey</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li class="active"><a href="index.html">About</a></li>
+					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
 					<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
 					<!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-					<li><a href="bib.html">Publications</a></li>
+					<li class="active"><a href="bib.html">Publications</a></li>
 				</ul>
 				<div class="header_button ml-auto">
 					<a href="files/Tapajit_Dey_CV2.pdf">Download CV</a>
@@ -97,84 +97,64 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">HTML5 & CSS Developer</div>
-					<div class="main_title">Jeremy Dey</div>
+					<!-- <div class="main_subtitle">What clients say</div> -->
+					<div class="main_title">Publications</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
-					<div class="about_content">
-						<div class="about_title">Description</div>
-						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit.</p>
+
+					<!-- <div class="contact">
+						<div class="container-fluid">
+							<div class="row">
+
+								<div class="col-xl-6">
+									<div class="contact_text">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien.</p>
+									</div>
+									<div class="contact_form_container">
+										<form action="#" id="contact_form" class="contact_form clearfix">
+											<div><input type="text" class="contact_input" placeholder="Name" required="required"></div>
+											<div><input type="email" class="contact_input" placeholder="E-mail" required="required"></div>
+											<input type="text" class="contact_input" placeholder="Subject" required="required">
+											<textarea class="contact_input contact_textarea" placeholder="Message" required="required"></textarea>
+											<button class="contact_button">Send Message</button>
+										</form>
+									</div>
+								</div>
+
+								<div class="col-xl-6">
+									<div class="contact_map">
+										<div class="map">
+											<div id="google_map" class="google_map">
+												<div class="map_container">
+													<div id="map"></div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+
+							</div>
 						</div>
-
-						<!-- Loaders -->
-
-						<div class="loaders clearfix">
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.75"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">intuition</div>
-									<div class="loader_subtitle">Etiam nec odio vestibulum est.</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.83"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">creativity</div>
-									<div class="loader_subtitle">Odio vestibulum est mattis.</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.25"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">pure luck</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.95"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">awesomeness</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
-								</div>
-							</div>
-
-						</div>
-					</div>
+					</div> -->
 				</div>
 
 			</div>
 		</div>
-
-
-	</div>
 <div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tapajit Dey All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 
+	</div>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap-4.1.2/popper.js"></script>
 <script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
-<script src="plugins/greensock/TweenMax.min.js"></script>
-<script src="plugins/greensock/TimelineMax.min.js"></script>
-<script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
-<script src="plugins/greensock/animation.gsap.min.js"></script>
-<script src="plugins/greensock/ScrollToPlugin.min.js"></script>
-<script src="plugins/progressbar/progressbar.js"></script>
 <script src="plugins/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
+<script src="js/contact.js"></script>
 </body>
 </html>
