--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About</title>
+<title>Eperience</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="plugins/mCustomScrollbar/jquery.mCustomScrollbar.css">
-<link rel="stylesheet" type="text/css" href="styles/main_styles.css">
-<link rel="stylesheet" type="text/css" href="styles/responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/experience.css">
+<link rel="stylesheet" type="text/css" href="styles/experience_responsive.css">
 </head>
 <body>
 
@@ -23,10 +23,10 @@
 			<div class="logo">Tapajit<span>.</span>Dey</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li class="active"><a href="index.html">About</a></li>
+					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<!-- <li><a href="services.html">Services</a></li> -->
-					<li><a href="experience.html">Experience</a></li>
+					<li class="active"><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
 					<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
 					<!-- <li><a href="testimonials.html">Testimonials</a></li> -->
@@ -97,84 +97,104 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">HTML5 & CSS Developer</div>
-					<div class="main_title">Jeremy Dey</div>
+					<div class="main_subtitle">What I am good at</div>
+					<div class="main_title">My Experience</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
-					<div class="about_content">
-						<div class="about_title">Description</div>
-						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit.</p>
+
+					<!-- Experience -->
+
+					<div class="experience">
+
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">2016-Present</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Senior Developer</div>
+									<div class="exp_subtitle">Company INC</div>
+								</div>
+								<div class="exp_text">
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+								</div>
+							</div>
 						</div>
 
-						<!-- Loaders -->
-
-						<div class="loaders clearfix">
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.75"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">intuition</div>
-									<div class="loader_subtitle">Etiam nec odio vestibulum est.</div>
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">2014-2016</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Junior Developer</div>
+									<div class="exp_subtitle">Company INC</div>
+								</div>
+								<div class="exp_text">
+									<p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
 								</div>
 							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.83"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">creativity</div>
-									<div class="loader_subtitle">Odio vestibulum est mattis.</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.25"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">pure luck</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.95"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">awesomeness</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
-								</div>
-							</div>
-
 						</div>
+
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">2012-2014</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Entry Level Developer</div>
+									<div class="exp_subtitle">Company INC</div>
+								</div>
+								<div class="exp_text">
+									<p>Consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">2011-2012</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Entry Level Developer</div>
+									<div class="exp_subtitle">Company INC</div>
+								</div>
+								<div class="exp_text">
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">2010-2011</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Entry Level Developer</div>
+									<div class="exp_subtitle">Company INC</div>
+								</div>
+								<div class="exp_text">
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+								</div>
+							</div>
+						</div>
+
 					</div>
-				</div>
 
+				</div>
 			</div>
 		</div>
-
-
-	</div>
 <div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 
+	</div>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap-4.1.2/popper.js"></script>
 <script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
-<script src="plugins/greensock/TweenMax.min.js"></script>
-<script src="plugins/greensock/TimelineMax.min.js"></script>
-<script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
-<script src="plugins/greensock/animation.gsap.min.js"></script>
-<script src="plugins/greensock/ScrollToPlugin.min.js"></script>
-<script src="plugins/progressbar/progressbar.js"></script>
 <script src="plugins/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="js/experience.js"></script>
 </body>
 </html>
