--- a/skills.html
+++ b/skills.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About</title>
+<title>Skills</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="plugins/mCustomScrollbar/jquery.mCustomScrollbar.css">
-<link rel="stylesheet" type="text/css" href="styles/main_styles.css">
-<link rel="stylesheet" type="text/css" href="styles/responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/skills.css">
+<link rel="stylesheet" type="text/css" href="styles/skills_responsive.css">
 </head>
 <body>
 
@@ -23,8 +23,8 @@
 			<div class="logo">Tapajit<span>.</span>Dey</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li class="active"><a href="index.html">About</a></li>
-					<li><a href="skills.html">Skills</a></li>
+					<li><a href="index.html">About</a></li>
+					<li class="active"><a href="skills.html">Skills</a></li>
 					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
@@ -97,70 +97,127 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">HTML5 & CSS Developer</div>
-					<div class="main_title">Jeremy Dey</div>
+					<div class="main_subtitle">What I am good at</div>
+					<div class="main_title">My Skills</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
-					<div class="about_content">
-						<div class="about_title">Description</div>
-						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit.</p>
+
+					<!-- Skills Content -->
+					<div class="skills">
+						<div class="skills_text">
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-xl-6">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit.</p>
+									</div>
+									<div class="col-xl-6">
+										<p>Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.</p>
+									</div>
+								</div>
+							</div>
 						</div>
 
-						<!-- Loaders -->
+						<!-- Progress Bars -->
+						<div class="progress_bars">
+							<div class="container-fluid">
+								<div class="row">
 
-						<div class="loaders clearfix">
+									<!-- Progress Bar -->
+									<div class="col-xl-4 col-lg-6 pb_col">
+										<div class="pb_item">
+											<div class="p_bar_title">Developement</div>
+											<div id="skill_1_pbar" class="skill_bars" data-perc="0.70" data-name="skill_1_pbar" data-color-start="#79ccff" data-color-end="#9b74ff"></div>
+										</div>
+									</div>
 
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.75"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">intuition</div>
-									<div class="loader_subtitle">Etiam nec odio vestibulum est.</div>
+									<!-- Progress Bar -->
+									<div class="col-xl-4 col-lg-6 pb_col">
+										<div class="pb_item">
+											<div class="p_bar_title">Developement</div>
+											<div id="skill_2_pbar" class="skill_bars" data-perc="0.60" data-name="skill_2_pbar" data-color-start="#ff4646" data-color-end="#ff26d9"></div>
+										</div>
+									</div>
+
+									<!-- Progress Bar -->
+									<div class="col-xl-4 col-lg-6 pb_col">
+										<div class="pb_item">
+											<div class="p_bar_title">Developement</div>
+											<div id="skill_3_pbar" class="skill_bars" data-perc="0.75" data-name="skill_3_pbar" data-color-start="#0054ff" data-color-end="#ff23d3"></div>
+										</div>
+									</div>
+
+									<!-- Progress Bar -->
+									<div class="col-xl-4 col-lg-6 pb_col">
+										<div class="pb_item">
+											<div class="p_bar_title">Developement</div>
+											<div id="skill_4_pbar" class="skill_bars" data-perc="1.0" data-name="skill_4_pbar" data-color-start="#79ff7c" data-color-end="#ffbd4a"></div>
+										</div>
+									</div>
+
+									<!-- Progress Bar -->
+									<div class="col-xl-4 col-lg-6 pb_col">
+										<div class="pb_item">
+											<div class="p_bar_title">Developement</div>
+											<div id="skill_5_pbar" class="skill_bars" data-perc="0.90" data-name="skill_5_pbar" data-color-start="#79ff8f" data-color-end="#7b74ff"></div>
+										</div>
+									</div>
+
+									<!-- Progress Bar -->
+									<div class="col-xl-4 col-lg-6 pb_col">
+										<div class="pb_item">
+											<div class="p_bar_title">Developement</div>
+											<div id="skill_6_pbar" class="skill_bars" data-perc="1.0" data-name="skill_6_pbar" data-color-start="#ff2d72" data-color-end="#ffab79"></div>
+										</div>
+									</div>
+
 								</div>
 							</div>
+						</div>
 
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.83"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">creativity</div>
-									<div class="loader_subtitle">Odio vestibulum est mattis.</div>
-								</div>
+						<!-- Milestones -->
+
+						<div class="milestones clearfix">
+
+							<!-- Milestone -->
+							<div class="milestone text-center">
+								<div class="milestone_icon"><img src="images/icon_6.png" alt=""></div>
+								<div class="milestone_counter" data-end-value="14">0</div>
+								<div class="milestone_text">Years of Experience</div>
 							</div>
 
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.25"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">pure luck</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
-								</div>
+							<!-- Milestone -->
+							<div class="milestone text-center">
+								<div class="milestone_icon"><img src="images/icon_7.png" alt=""></div>
+								<div class="milestone_counter" data-end-value="1000" data-sign-before="+">0</div>
+								<div class="milestone_text">Happy Clients</div>
 							</div>
 
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.95"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">awesomeness</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
-								</div>
+							<!-- Milestone -->
+							<div class="milestone text-center">
+								<div class="milestone_icon"><img src="images/icon_8.png" alt=""></div>
+								<div class="milestone_counter" data-end-value="14" data-sign-after="k">0</div>
+								<div class="milestone_text">Followers on FB</div>
+							</div>
+
+							<!-- Milestone -->
+							<div class="milestone text-center">
+								<div class="milestone_icon"><img src="images/icon_9.png" alt=""></div>
+								<div class="milestone_counter" data-end-value="732">0</div>
+								<div class="milestone_text">Finished Projects</div>
 							</div>
 
 						</div>
+
 					</div>
 				</div>
-
 			</div>
 		</div>
 
-
-	</div>
-<div align='center'>
+		<div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-
+	</div>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
@@ -175,6 +232,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="js/skills.js"></script>
 </body>
 </html>
