--- a/bib.html
+++ b/bib.html
@@ -113,6 +113,19 @@
 
 					<tr valign="top">
 					<td align="right" class="bibtexnumber">
+					[<a name="dey2019patterns">9</a>]
+					</td>
+					<td class="bibtexitem">
+					Tapajit Dey and Audris Mockus.
+					 Deriving a Usage-Independent Software Quality Metric.
+					 Accepted In <em>International Journal of Empirical Software Engineering, 2019</em>.
+					<!-- [&nbsp;<a href="https://arxiv.org/pdf/1907.06538.pdf">link</a>&nbsp;] -->
+
+					</td>
+					</tr>
+
+					<tr valign="top">
+					<td align="right" class="bibtexnumber">
 					[<a name="dey2019patterns">8</a>]
 					</td>
 					<td class="bibtexitem">
@@ -259,7 +272,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tapaj
 <script src="plugins/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script> -->
 <script src="js/contact.js"></script>
 </body>
 </html>
