--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Education</title>
+<title>Eperience</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="plugins/mCustomScrollbar/jquery.mCustomScrollbar.css">
-<link rel="stylesheet" type="text/css" href="styles/education.css">
-<link rel="stylesheet" type="text/css" href="styles/education_responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/experience.css">
+<link rel="stylesheet" type="text/css" href="styles/experience_responsive.css">
 </head>
 <body>
 
@@ -97,59 +97,80 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">What I am good at</div>
+					<!-- <div class="main_subtitle">What I have Learnt</div> -->
 					<div class="main_title">My Education</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 
-					<!-- Education -->
+					<!-- Experience -->
 
-					<div class="education">
+					<div class="experience">
 
-						<!-- Education Item -->
-						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<div><div class="edu_year">2010</div></div>
-							<div><div class="edu_image"><img src="images/edu_1.png" alt=""></div></div>
-							<div class="edu_content">
-								<div class="edu_title_container">
-									<div class="edu_title">University of Colorado</div>
-									<div class="edu_subtitle">Developer Diploma PhD</div>
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">August 2015 <br></br>- Present</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">PhD, with <a href="http://mockus.org"> Dr. Audris Mockus</a></div>
+									<div class="exp_subtitle">University of Tennessee, Knoxville </div>
 								</div>
-								<div class="edu_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+								<div class="exp_text">
+									<ul>
+										<li> <b>Thesis topic</b> &ndash; Modeling User-Affected Software Properties for Open Source Software Supply Chains.
+										<li> <b>Research Focus</b> &ndash; Software Repository Mining, Data Analytics, Empirical Software Engineering
+										<li> <b> Research Projects</b> &ndash;
+										<ul>
+											<li>	&#9899; <b><i>Effects of Software Usage on Perceived Quality of a Software</i></b>
+											<ul>
+												<li> -Proposed an usage-independent <i>actionable</i> and <i>easy-to-use measure</i> of software quality
+												<li> -Used <i>Bayesian Networks</i> and <i>Random Forest</i> to model the interrelationship between software faults, complexity, and usage
+												<li> -Developed the model by studying a proprietary mobile software and verified the external validity of the concept for popular NPM packages
+											</ul>
+
+											<li> &#9899; <b><i>User Classification based on Participation Patterns in NPM Ecosystem</i></b>
+												<ul>
+        									<li> -Explored User participation to NPM packages inside and outside of the users' individual supply chains,
+														i.e. packages the user's projects depend on directly or indirectly  (dataset consisted of <b>1,376,946</b>
+														issues and pull-requests(PR) created for <b>4433</b> NPM packages and <b>272,142</b> issue creators)
+        									<li> -Classified the Users based on their participation patterns using <i>C-means clustering</i> algorithm
+      									</ul>
+											<li>  &#9899; <b><i> Predicting Pull Request Quality</i></b>
+												<ul>
+        									<li> -Investigated the factors affecting Pull Request Quality (chance of the Pull Request being accepted within a month) using Random Forest models
+        									<li> -Replicated a study that explored a similar question and investigated a larger dataset
+														(<b>483,988</b> Pull Requests from <b>4218</b> popular NPM packages) and improved the performance by adding additional factors,
+														achieving an AUC-ROC value of <b>0.95</b>, <b>6%</b> higher than the previous study
+      									</ul>
+
+											<li>  &#9899; <b><i> Software Supply Chain: Exploring the Effects of Interdependencies in a Software Ecosystem on Popularity</i></b>
+												<ul>
+        									<li> -Created Software Supply Chain for NPM Ecosystem by analyzing dependencies of packages
+        									<li> -Explored the effects of dependencies on Package popularity (downloads)
+      									</ul>
+										</ul>
+									</ul>
 								</div>
 							</div>
 						</div>
 
-						<!-- Education Item -->
-						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<div><div class="edu_year">2008</div></div>
-							<div><div class="edu_image"><img src="images/edu_2.png" alt=""></div></div>
-							<div class="edu_content">
-								<div class="edu_title_container">
-									<div class="edu_title">Graphic School</div>
-									<div class="edu_subtitle">Graphic Design Course</div>
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">July 2007 -<br></br> May 2012</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Dual Degree (B.Tech. (Hons.) &amp; M.Tech.)</div>
+									<div class="exp_subtitle">Indian Institute of Technology, Kharagpur (IIT-KGP)</div>
 								</div>
-								<div class="edu_text">
-									<p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+								<div class="exp_text">
+									<ul>
+										<li> <b> Specialization</b> &ndash; Microelectronics and VLSI Design
+										<li> <b> CGPA</b> &ndash; 8.67/10.00
+									</ul>
 								</div>
 							</div>
 						</div>
 
-						<!-- Education Item -->
-						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<div><div class="edu_year">2007</div></div>
-							<div><div class="edu_image"><img src="images/edu_3.png" alt=""></div></div>
-							<div class="edu_content">
-								<div class="edu_title_container">
-									<div class="edu_title">Colorado High School</div>
-									<div class="edu_subtitle">Bachelor Degree - Developer</div>
-								</div>
-								<div class="edu_text">
-									<p>Consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
-								</div>
-							</div>
-						</div>
+
 
 					</div>
 
@@ -170,6 +191,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="js/education.js"></script>
+<script src="js/experience.js"></script>
 </body>
 </html>
