--- a/experience.html
+++ b/experience.html
@@ -97,7 +97,7 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">What I am good at</div>
+					<!-- <div class="main_subtitle">My Industry Exposure</div> -->
 					<div class="main_title">My Experience</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
@@ -108,70 +108,35 @@
 
 						<!-- Experience Item -->
 						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">2016-Present</div></div>
+							<div><div class="exp_time">June 2012 - June 2015</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
-									<div class="exp_title">Senior Developer</div>
-									<div class="exp_subtitle">Company INC</div>
+									<div class="exp_title">Staff Research Engineer</div>
+									<div class="exp_subtitle">IBM India Software Lab (SRDC)</div>
 								</div>
 								<div class="exp_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+									<ul>
+										<li> &ndash;<b>Primary Responsibility</b> &ndash; Key member of the team in charge of Quality Assurance of IBM’s 200mm Process Development Kits (PDK),
+											containing device models (primarily MOSFETs) and support components for chip design and layout
+        						<li> &ndash;Helped automate test procedures using Python that enhanced test coverage <b>~300x</b>, reduced turn-around-time by <b>75%</b>,
+											improved efficiency by <b>50%</b>, and reduced customer issues drastically
+        						<li>&ndash;Test methodology: "An Integrated Approach to Process Design Kit (PDK) Verification" accepted for <b>Patent Publication</b> (Ref. No. IN820131127)
+									</ul>
 								</div>
 							</div>
 						</div>
-
 						<!-- Experience Item -->
 						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">2014-2016</div></div>
+							<div><div class="exp_time">May 2011 -July 2011</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
-									<div class="exp_title">Junior Developer</div>
-									<div class="exp_subtitle">Company INC</div>
+									<div class="exp_title">Summer Intern</div>
+									<div class="exp_subtitle">IBM India Software Lab (SRDC)</div>
 								</div>
 								<div class="exp_text">
-									<p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
-								</div>
-							</div>
-						</div>
-
-						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">2012-2014</div></div>
-							<div class="exp_content">
-								<div class="exp_title_container">
-									<div class="exp_title">Entry Level Developer</div>
-									<div class="exp_subtitle">Company INC</div>
-								</div>
-								<div class="exp_text">
-									<p>Consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
-								</div>
-							</div>
-						</div>
-
-						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">2011-2012</div></div>
-							<div class="exp_content">
-								<div class="exp_title_container">
-									<div class="exp_title">Entry Level Developer</div>
-									<div class="exp_subtitle">Company INC</div>
-								</div>
-								<div class="exp_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
-								</div>
-							</div>
-						</div>
-
-						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">2010-2011</div></div>
-							<div class="exp_content">
-								<div class="exp_title_container">
-									<div class="exp_title">Entry Level Developer</div>
-									<div class="exp_subtitle">Company INC</div>
-								</div>
-								<div class="exp_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
+									<ul>
+										<li> &ndash; Designed a Python based GUI for simulating and plotting the results of parasitic extraction of SOI (Silicon On Insulator) devices
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -183,7 +148,8 @@
 		</div>
 <div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
+by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 
 	</div>
