--- a/index.html
+++ b/index.html
@@ -97,14 +97,23 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">HTML5 & CSS Developer</div>
-					<div class="main_title">Jeremy Dey</div>
+					<div class="main_subtitle">Researcher, PhD Candidate - Computer Science: <br></br>
+						Empirical Software Engineering, Data Science, Open Source Software<br></div>
+					<div class="main_title">Tapajit Dey</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 					<div class="about_content">
 						<div class="about_title">Description</div>
 						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit.</p>
+							<p>
+							I am a <b>passionate</b> and <b>self-motivated</b> researcher enthusiastic about studying the
+							<a href="http://digitalarchaeology.info/"><b>digital traces</b></a> left by the software developers during their development activities, and using
+							that evidence for understanding the developers' culture and behavior, and also for
+							verifying and debunking various myths and illusions about the software development process.
+								I have experience in the <b>end-to-end process</b> of collecting and storing the data required for my
+								research from online sources, cleaning and preprocessing the data, and using the processed data
+								to create models that answer important research questions.
+							</p>
 						</div>
 
 						<!-- Loaders -->
@@ -113,10 +122,19 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.75"></div>
+								<div class="loader" data-perc="0.87"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title">intuition</div>
-									<div class="loader_subtitle">Etiam nec odio vestibulum est.</div>
+									<div class="loader_title">Curiosity</div>
+									<div class="loader_subtitle">Passion for <br>Knowledge and<br> Understanding</div>
+								</div>
+							</div>
+
+							<!-- Loader -->
+							<div class="loader_container">
+								<div class="loader" data-perc="0.78"></div>
+								<div class="loader_content text-center">
+									<div class="loader_title">creativity</div>
+									<div class="loader_subtitle">Cross-Discipline <br> Knowledge, Innovative,<br> and Resourceful </div>
 								</div>
 							</div>
 
@@ -124,17 +142,17 @@
 							<div class="loader_container">
 								<div class="loader" data-perc="0.83"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title">creativity</div>
-									<div class="loader_subtitle">Odio vestibulum est mattis.</div>
+									<div class="loader_title">Analytical</div>
+									<div class="loader_subtitle">Critical Thinking, <br>Quantitative<br> Reasoning</div>
 								</div>
 							</div>
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.25"></div>
+								<div class="loader" data-perc="0.65"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title">pure luck</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
+									<div class="loader_title">Programming</div>
+									<div class="loader_subtitle">Knowledge of <br>Programming Languages<br> and Algorithms</div>
 								</div>
 							</div>
 
@@ -142,8 +160,8 @@
 							<div class="loader_container">
 								<div class="loader" data-perc="0.95"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title">awesomeness</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
+									<div class="loader_title"> focussed</div>
+									<div class="loader_subtitle">Motivated by Impact<br> Diligent, Keen<br> on the "Big Picture"</div>
 								</div>
 							</div>
 
