--- a/skills.html
+++ b/skills.html
@@ -108,15 +108,37 @@
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-xl-6">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit.</p>
+										<p>
+											<b>Software and Tools:<br></b>
+											I am well versed with a number of data repositories and the corresponding APIs, and other data sources
+											(e.g. <i><a href="https://developer.github.com/v3/">GitHub</a>, <a href="http://ghtorrent.org">GHTorrent</a>,
+											<a href="https://github.com/woc-hack/tutorial">World of Code</a>, <a href="https://cloud.google.com/bigquery/">Google Big Query</a></i> etc.).
+											I have experience in using both relational (<i>MySQL</i>) and non-relational (<i>NoSQL, e.g. <a href="https://www.mongodb.com/">MongoDB</a></i>)
+											databases for data storage. I also am
+											familiar with useful utilities like <i><a href="https://hub.docker.com/">docker</a>, <a href="https://jupyter.org/">jupyter notebooks</a>,
+											vim, <a href="https://rstudio.com/">R-Studio</a>, <a href="https://shiny.rstudio.com/">R-Shiny</a></i> etc. and the <i>git</i> version
+											control system. In terms of documentation,
+											I am well-acquainted with <i>LaTeX</i> and <i>Markdown styles</i>. I am most familiar with the <i>Linux</i> operating system, and I primarily
+											use <i>Python</i> and <i>Bash</i> for data parsing and data processing.
+										</p>
 									</div>
 									<div class="col-xl-6">
-										<p>Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.</p>
+										<p>
+											<b>Machine Learning Techniques:</b><br>
+											In terms of the supervised machine learning models,	I am knowledgeable about <i>Linear and Logistic Regression, Decision Trees and Random Forest,
+											GAM</i> (Generalized Additive Model),	<i>SVM</i> (Support Vector Machine)	etc. Among various unsupervised modeling techniques, I am proficient in
+											different <i>clustering</i> methods (e.g. <i>K-means, Fuzzy C-means, PAM, Hierarchical clustering</i> etc.), dimension reduction techniques like
+											<i>PCA and SVD,</i>
+											association rule mining, and different discretization techniques. I am well familiar with <i>Bayesian Network (BN)</i> models, especially BN
+											structure search techniques and inferencing (both causal and non-causal), and I also have some experience in using <i>deep learning</i> models, like
+											the MLP (Multi Layer Perceptron) model, though mostly on numerical data. I primarily use <i>R</i> for modeling, but I am familiar with similar functions
+											in <i>Python</i> as well.
+										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-
+					<b>Programming Language Skill &mdash; Self Assessment</b>
 						<!-- Progress Bars -->
 						<div class="progress_bars">
 							<div class="container-fluid">
@@ -125,48 +147,48 @@
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Developement</div>
-											<div id="skill_1_pbar" class="skill_bars" data-perc="0.70" data-name="skill_1_pbar" data-color-start="#79ccff" data-color-end="#9b74ff"></div>
+											<div class="p_bar_title">Python 	&mdash; Data Parsing</div>
+											<div id="skill_1_pbar" class="skill_bars" data-perc="0.95" data-name="skill_1_pbar" data-color-start="#79ccff" data-color-end="#9b74ff"></div>
 										</div>
 									</div>
 
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Developement</div>
-											<div id="skill_2_pbar" class="skill_bars" data-perc="0.60" data-name="skill_2_pbar" data-color-start="#ff4646" data-color-end="#ff26d9"></div>
+											<div class="p_bar_title">Python &mdash; Machine Learning</div>
+											<div id="skill_2_pbar" class="skill_bars" data-perc="0.50" data-name="skill_2_pbar" data-color-start="#ff4646" data-color-end="#ff26d9"></div>
 										</div>
 									</div>
 
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Developement</div>
-											<div id="skill_3_pbar" class="skill_bars" data-perc="0.75" data-name="skill_3_pbar" data-color-start="#0054ff" data-color-end="#ff23d3"></div>
+											<div class="p_bar_title">R </div>
+											<div id="skill_3_pbar" class="skill_bars" data-perc="0.90" data-name="skill_3_pbar" data-color-start="#0054ff" data-color-end="#ff23d3"></div>
 										</div>
 									</div>
 
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Developement</div>
-											<div id="skill_4_pbar" class="skill_bars" data-perc="1.0" data-name="skill_4_pbar" data-color-start="#79ff7c" data-color-end="#ffbd4a"></div>
+											<div class="p_bar_title">Databases &mdash; MySQL, MongoDB</div>
+											<div id="skill_4_pbar" class="skill_bars" data-perc="0.70" data-name="skill_4_pbar" data-color-start="#79ff7c" data-color-end="#ffbd4a"></div>
 										</div>
 									</div>
 
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Developement</div>
-											<div id="skill_5_pbar" class="skill_bars" data-perc="0.90" data-name="skill_5_pbar" data-color-start="#79ff8f" data-color-end="#7b74ff"></div>
+											<div class="p_bar_title">Shell Script (Bash)</div>
+											<div id="skill_5_pbar" class="skill_bars" data-perc="0.60" data-name="skill_5_pbar" data-color-start="#79ff8f" data-color-end="#7b74ff"></div>
 										</div>
 									</div>
 
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Developement</div>
-											<div id="skill_6_pbar" class="skill_bars" data-perc="1.0" data-name="skill_6_pbar" data-color-start="#ff2d72" data-color-end="#ffab79"></div>
+											<div class="p_bar_title">Other Languages &mdash; Perl, HTML, JavaScript, C</div>
+											<div id="skill_6_pbar" class="skill_bars" data-perc="0.20" data-name="skill_6_pbar" data-color-start="#ff2d72" data-color-end="#ffab79"></div>
 										</div>
 									</div>
 
@@ -174,6 +196,8 @@
 							</div>
 						</div>
 
+						<!-- This part is commented -->
+						<textarea style="display:none;">
 						<!-- Milestones -->
 
 						<div class="milestones clearfix">
@@ -207,6 +231,7 @@
 							</div>
 
 						</div>
+					</textarea>
 
 					</div>
 				</div>
@@ -215,7 +240,8 @@
 
 		<div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
+This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 	</div>
 </div>
