website v1.0.1: minor bugs

--- a/experience.html
+++ b/experience.html
@@ -25,11 +25,8 @@
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li class="active"><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-					<!-- <li><a href="testimonials.html">Testimonials</a></li> -->
 					<li><a href="bib.html">Publications</a></li>
 				</ul>
 				<div class="header_button ml-auto">
@@ -108,7 +105,7 @@
 
 						<!-- Experience Item -->
 						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">June 2012 - June 2015</div></div>
+							<div><div class="exp_time">June 2012 -<br></br> June 2015</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
 									<div class="exp_title">Staff Research Engineer</div>
@@ -127,7 +124,7 @@
 						</div>
 						<!-- Experience Item -->
 						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">May 2011 -July 2011</div></div>
+							<div><div class="exp_time">May 2011 -<br></br> July 2011</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
 									<div class="exp_title">Summer Intern</div>
