website v1.0.4: more updates

--- a/education.html
+++ b/education.html
@@ -105,7 +105,7 @@
 							<div><div class="exp_time">August 2015 <br></br>- Present</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
-									<div class="exp_title">PhD, with <a href="http://mockus.org"> Dr. Audris Mockus</a></div>
+									<div class="exp_title">PhD &ndash; Computer Science, with <a href="http://mockus.org"> Dr. Audris Mockus</a></div>
 									<div class="exp_subtitle">University of Tennessee, Knoxville </div>
 								</div>
 								<div class="exp_text">
@@ -152,7 +152,7 @@
 							<div><div class="exp_time">July 2007 -<br></br> May 2012</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
-									<div class="exp_title">Dual Degree (B.Tech. (Hons.) &amp; M.Tech.)</div>
+									<div class="exp_title">Dual Degree (B.Tech. (Hons.) &amp; M.Tech.) &ndash; <br></br>Electronics and Electrical Communication Engineering</div>
 									<div class="exp_subtitle">Indian Institute of Technology, Kharagpur (IIT-KGP)</div>
 								</div>
 								<div class="exp_text">
