--- a/index.html
+++ b/index.html
@@ -100,8 +100,13 @@
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 					<div class="about_content">
-						<div class="about_title">Description</div>
+						<!-- <div class="about_title">Description</div> -->
 						<div class="about_text">
+							<p>
+								I am a PhD Candidate in Computer Science studying at <a href="https://www.eecs.utk.edu/">The University of Tennessee, Knoxville</a>. I received my B.Tech. and M.Tech. degrees in Electronics and 
+								Electrical Communication Engineering from <a href="http://iitkgp.ac.in/">I.I.T. Kharagpur</a> 
+								in 2012. I worked in IBM India Software Labs as a Staff Research Engineer from 2012 to 2015. 
+							</p>
 							<p>
 							I am a <b>passionate</b> and <b>self-motivated</b> researcher enthusiastic about studying the
 							<a href="http://digitalarchaeology.info/"><b>digital traces</b></a> left by the software developers during their development activities, and using
