--- a/skills.html
+++ b/skills.html
@@ -91,7 +91,7 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">What I am good at</div>
+					<!-- <div class="main_subtitle">What I am good at</div> -->
 					<div class="main_title">My Skills</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
@@ -103,7 +103,7 @@
 								<div class="row">
 									<div class="col-xl-6">
 										<p>
-											<b>Software and Tools:<br></b>
+											<font size="5" color="black"><b>Software and Tools:<br></b></font>
 											I am well versed with a number of data repositories and the corresponding APIs, and other data sources
 											(e.g. <i><a href="https://developer.github.com/v3/">GitHub</a>, <a href="http://ghtorrent.org">GHTorrent</a>,
 											<a href="https://github.com/woc-hack/tutorial">World of Code</a>, <a href="https://cloud.google.com/bigquery/">Google Big Query</a></i> etc.).
@@ -118,7 +118,7 @@
 									</div>
 									<div class="col-xl-6">
 										<p>
-											<b>Machine Learning Techniques:</b><br>
+											<font size="5" color="black"><b>Machine Learning Techniques:</b></font><br>
 											In terms of the supervised machine learning models,	I am knowledgeable about <i>Linear and Logistic Regression, Decision Trees and Random Forest,
 											GAM</i> (Generalized Additive Model),	<i>SVM</i> (Support Vector Machine)	etc. Among various unsupervised modeling techniques, I am proficient in
 											different <i>clustering</i> methods (e.g. <i>K-means, Fuzzy C-means, PAM, Hierarchical clustering</i> etc.), dimension reduction techniques like
@@ -132,7 +132,7 @@
 								</div>
 							</div>
 						</div>
-					<b>Programming Language Skill &mdash; Self Assessment</b>
+					<font size="5" color="black"><b>Programming Language Skill &mdash; Self Assessment</b></font>
 						<!-- Progress Bars -->
 						<div class="progress_bars">
 							<div class="container-fluid">
@@ -141,7 +141,7 @@
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Python 	&mdash; Data Parsing</div>
+											<div class="p_bar_title">Python 	&ndash; Data Parsing &amp; General Programming</div>
 											<div id="skill_1_pbar" class="skill_bars" data-perc="0.95" data-name="skill_1_pbar" data-color-start="#79ccff" data-color-end="#9b74ff"></div>
 										</div>
 									</div>
@@ -149,7 +149,7 @@
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Python &mdash; Machine Learning</div>
+											<div class="p_bar_title">Python &ndash; Machine Learning</div>
 											<div id="skill_2_pbar" class="skill_bars" data-perc="0.50" data-name="skill_2_pbar" data-color-start="#ff4646" data-color-end="#ff26d9"></div>
 										</div>
 									</div>
@@ -165,7 +165,7 @@
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Databases &mdash; MySQL, MongoDB</div>
+											<div class="p_bar_title">Databases &ndash; MySQL, MongoDB</div>
 											<div id="skill_4_pbar" class="skill_bars" data-perc="0.70" data-name="skill_4_pbar" data-color-start="#79ff7c" data-color-end="#ffbd4a"></div>
 										</div>
 									</div>
@@ -181,7 +181,7 @@
 									<!-- Progress Bar -->
 									<div class="col-xl-4 col-lg-6 pb_col">
 										<div class="pb_item">
-											<div class="p_bar_title">Other Languages &mdash; Perl, HTML, JavaScript, C</div>
+											<div class="p_bar_title">Other Languages &ndash; Perl, HTML, JavaScript, C</div>
 											<div id="skill_6_pbar" class="skill_bars" data-perc="0.20" data-name="skill_6_pbar" data-color-start="#ff2d72" data-color-end="#ffab79"></div>
 										</div>
 									</div>
