website v1.0.5: first pass end

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 						<!-- <div class="about_title">Description</div> -->
 						<div class="about_text">
 							<p>
-								I am a PhD Candidate in Computer Science studying at <a href="https://www.eecs.utk.edu/">The University of Tennessee, Knoxville</a>. I received my B.Tech. and M.Tech. degrees in Electronics and 
-								Electrical Communication Engineering from <a href="http://iitkgp.ac.in/">I.I.T. Kharagpur</a> 
+								I am a PhD Candidate in Computer Science studying at <a href="https://www.eecs.utk.edu/">The University of Tennessee, Knoxville</a>. I received my B.Tech. and M.Tech. degrees in <i>Electronics and 
+								Electrical Communication Engineering</i> from <a href="http://iitkgp.ac.in/">I.I.T. Kharagpur</a> 
 								in 2012. I worked in IBM India Software Labs as a Staff Research Engineer from 2012 to 2015. 
 							</p>
 							<p>
@@ -124,7 +124,7 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.87"></div>
+								<div class="loader" data-perc="0.92"></div>
 								<div class="loader_content text-center">
 									<div class="loader_title">Curiosity</div>
 									<div class="loader_subtitle">Passion for <br>Knowledge and<br> Understanding</div>
@@ -133,7 +133,7 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.78"></div>
+								<div class="loader" data-perc="0.80"></div>
 								<div class="loader_content text-center">
 									<div class="loader_title">creativity</div>
 									<div class="loader_subtitle">Cross-Discipline <br> Knowledge, Innovative,<br> and Resourceful </div>
@@ -142,7 +142,7 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.83"></div>
+								<div class="loader" data-perc="0.87"></div>
 								<div class="loader_content text-center">
 									<div class="loader_title">Analytical</div>
 									<div class="loader_subtitle">Critical Thinking, <br>Quantitative<br> Reasoning</div>
